--- a/frontend-development/index.html
+++ b/frontend-development/index.html
@@ -6,112 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Hub</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            font-family:Verdana, Geneva, Tahoma, sans-serif;
-        }
-        body {
-            background-color: rgb(244, 231, 197);
-        }
-        header {
-            background-color: #111;
-            text-align: right;
-        }
-        header>a {
-            color: white;
-            font-size: 15px;
-            margin-right: 25px;
-            text-decoration: none;
-        }
-        .dropdown {
-            position: relative;
-            display: inline-block;
-        }
-        .dropbtn {
-            color: #fff;
-            padding: 10px 30px;
-            font-size: 15px;
-            background-color: rgb(0, 128, 0);
-            border: none;
-        }
-        .dropdown-content {
-            position: absolute;
-            right: 0;
-            display: none;
-            white-space: nowrap;
-            background-color: #bfbfbf;
-        }
-        .dropdown-content a {
-            display: block;
-            color: #111;
-            padding: 15px 25px;
-            text-decoration: none;
-            
-        }
-        .dropdown-content a:hover {
-            background-color: #6d6d6d;
-        }
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-
-        .branding {
-            position: relative;
-            background-color: #fac715;
-            height: 150px;
-            width: 100%;
-        }
-        img[src="./assets/images/logo.gif"] {
-            height: 150px;
-            width: 150px;
-        }
-        .left-align {
-            position: absolute;
-            top:0;
-            left: 0;
-        }
-        .right-align {
-            position: absolute;
-            top:0;
-            right: 0;
-        }
-        .branding h1 {
-            position: absolute;
-            top: 10px;
-            left: 160px;
-            font-family: fantasy;
-            font-size: 75px;
-            white-space: nowrap;
-            font-weight: normal;
-        }
-        .branding p {
-            position: absolute;
-            top: 90px;
-            left: 160px;
-            font-size: 16.1px;
-            white-space: nowrap;
-            font-weight: normal;
-        }
-        #searchbox {
-            position: relative;
-            margin-right: 40px;
-            margin-top:60px;
-        }
-        #searchbox input {
-            position: absolute;
-            right: 0;
-            height: 30px;
-            width: 300px;
-        }
-        #searchbox button {
-            position: absolute;
-            right: 0;
-            height: 30px;
-            
-        }
-    </style>
+    <link rel="stylesheet" href="./assets/css/external.css" />
 </head>
 <body>
     <header>
